--- a/main.css
+++ b/main.css
@@ -30,6 +30,18 @@ body {
     background-color: #ffeae6;
 }
 
+
+.carousel,
+.carousel-item {
+    height: 80vh; 
+    width: 100%; 
+}
+
+
+.carousel-item img {
+    width: 90%;
+}
+
 .text-colored {
     color: #e15f41;
 }
